--- a/ResearchTimeline/researchTimeline.tex
+++ b/ResearchTimeline/researchTimeline.tex
@@ -21,7 +21,7 @@ as it reliant to the results from the preceding tasks.
 \begin{figure}[htbp!] 
   \centering    
   \includegraphics[width=0.6\textwidth]{PlannerActivity}
-  \caption[Planner]{High-level overview of the porting efforts}
+  \caption[High-level overview of the porting efforts]{High-level overview of the porting efforts}
   \label{fig:PlannerPorting}
   \end{figure}
 
@@ -87,7 +87,7 @@ This section is split by a month by month planner to help keep tracks of tasks.
 \begin{figure}[htbp!] 
   \centering    
   \includegraphics[width=1.2\textwidth]{gnatt-1}
-  \caption[Planner]{Gantt Chart till summer 2023}
+  \caption[Gantt Chart till summer 2023]{Gantt Chart till summer 2023}
   \label{fig:Gantt Chart}
   \end{figure}
 % \end{landscape}
@@ -95,7 +95,7 @@ This section is split by a month by month planner to help keep tracks of tasks.
   \begin{figure}[htbp!] 
     \centering    
     \includegraphics[width=1.2\textwidth]{gnatt-2}
-    \caption[Planner]{Gantt Chart till summer 2023}
+    \caption[Gantt Chart till summer 2023]{Gantt Chart till summer 2023}
     \label{fig:Gantt Chart}
     \end{figure}
   % \end{landscape}
@@ -103,7 +103,7 @@ This section is split by a month by month planner to help keep tracks of tasks.
     \begin{figure}[htbp!] 
       \centering    
       \includegraphics[width=1.2\textwidth]{gnatt-3}
-      \caption[Planner]{Gantt Chart till summer 2023}
+      \caption[Gantt Chart till summer 2023]{Gantt Chart till summer 2023}
       \label{fig:Gantt Chart}
       \end{figure}
     % \end{landscape}  
