--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -2,8 +2,8 @@
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
 There has been a lot work done in the areas of slim down kernels, OS paradigms which treat a multi-core machine as network of independent cores 
-and specialized hardware which could provide certain security features. While independently they have been heavily worked on. The major aims for 
+and specialized hardware which could provide certain security features. While they have been heavily independently worked on. The major aims for 
 the following research would be to combine all 3 of them to together and address the potential benefits from such an approach. The year 1 report 
-does a survey of implementations done in the areas Uni-kernels, Multi-kernels and TAG based architectures and based on these surveys comes up
-with the research aims for the following PhD. A timeline is provided to with the detailed plan for the following research.
+does a survey of implementations done in the areas Uni-kernels, Multi-kernels and TAG based architectures. Based on these surveys, comes up
+with the research aims for the following PhD. A timeline is provided with the detailed plan for the following research.
 \end{abstract}
