--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -7,11 +7,11 @@
 This report provides a proposal for the potential research 
 activities for the following PhD. The main focus would be 
 the literature review section which covers most of important 
-bits of the following report. Based on the surveyed implementation 
+bits of the following report. Based on the surveyed implementations 
 in the literature review which is for Uni-kernels, Multi-kernels 
-and TAG based architecture the identified mappings are as the followings 
-for Uni-kernels the best implementation of among the surveyed would be Hermit-Core, For Multi-kernels 
-Popcorn linux would be suitable choice and for TAG based architecture
+and TAG based architecture the identified mappings are as follows.
+For Uni-kernels the best implementation of among the surveyed would be Hermit-Core, for Multi-kernels 
+Popcorn linux would be a suitable choice and for TAG based architecture
 CHERI would be a suitable choice. The literature review section
 provides the exact reasons. The research timeline section helped
 to create a focused depth of the initial milestones for the research 
