--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -1,7 +1,7 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
 % \title{Writing your PhD thesis in \texorpdfstring{\\ \LaTeX2e}{LaTeX2e}}
-\title{Mapping Unikernels with TAG based architectures}
+\title{Combining TAG based architectures with (Uni-kernels and Multi-kernels)}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
